Fix Dark Omnibar Input visibility

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -595,7 +595,7 @@
 			background-color: var(--darkmode-background);
 			border: 3px solid #FFF;
 			// Move Rem Input
-				input.placeholder\:text-gray-30.rn-clr-content-primary {
+				input {
 					color: var(--darkmode-text) !important;
 				}
 			// Top
